@@ -7,6 +7,7 @@ Version 0.8.5~dev
 	  refs: #3415.
 	* Add BaseJob.BaseError to reduce verbosity of derived exceptions,
 	  closes: #3415.
+	* Deprecate set_check_status and except checks to return their status.
 
 Version 0.8.4 Released on 2010/10/04
 
